--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ deploy:
   local_dir: docs
   provider: pages
   skip_cleanup: true
-  github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
+  #github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
   on:
    branch: master
    condition: '"$TRAVIS_JOB_NUMBER" == *.1'
