--- a/package.json
+++ b/package.json
@@ -7,37 +7,34 @@
     "url": "https://github.com/merri/react-maria/issues"
   },
   "devDependencies": {
-    "@researchgate/babel-preset-rg": "^1.0.1",
-    "@researchgate/eslint-config-rg-react": "^2.0.0",
-    "@storybook/addon-actions": "^3.4.12",
-    "@storybook/addon-knobs": "^3.4.12",
-    "@storybook/addon-options": "^3.4.12",
-    "@storybook/react": "^3.4.12",
-    "babel-cli": "^6.24.1",
-    "babel-eslint": "^8.0.2",
-    "babel-jest": "^21.0.0",
+    "@babel/cli": "^7.5.5",
+    "@researchgate/babel-preset-rg": "^3.0.0",
+    "@researchgate/eslint-config-rg-react": "^5.0.1",
+    "@storybook/addon-actions": "^5.1.11",
+    "@storybook/addon-knobs": "^5.1.11",
+    "@storybook/addon-options": "^5.1.11",
+    "@storybook/react": "^5.1.11",
+    "babel-eslint": "^10.0.2",
+    "babel-jest": "^24.9.0",
     "babel-polyfill": "^6.26.0",
-    "conventional-github-releaser": "^2.0.0",
+    "conventional-github-releaser": "^3.1.3",
     "cross-env": "^5.1.1",
-    "css-loader": "^0.28.4",
-    "eslint": "^4.11.0",
-    "eslint-config-prettier": "^2.8.0",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-prettier": "^2.3.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
-    "husky": "^0.14.3",
-    "jest": "^21.0.0",
-    "lint-staged": "^6.0.0",
+    "husky": "^3.0.4",
+    "jest": "^24.9.0",
+    "lint-staged": "^9.2.3",
     "prettier": "^1.18.2",
     "raf": "^3.4.0",
-    "raw-loader": "^1.0.0-beta.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-test-renderer": "^16.9.0",
-    "rimraf": "^2.7.1",
-    "standard-version": "^4.2.0",
-    "storybook-readme": "^3.1.1",
-    "style-loader": "^0.19.0",
+    "rimraf": "^3.0.0",
+    "standard-version": "^7.0.0",
+    "storybook-readme": "^5.0.8",
     "validate-commit-msg": "^2.14.0"
   },
   "files": [
